<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="title_activity_developers">DevelopersActivity</string>
    <string name="title_activity_asif">AsifActivity</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="title_activity_tic_tac_toe">TicTacToeActivity</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="turn_player_one">Player 1\'s turn.</string>
    <string name="turn_player_Two">Player 2\'s turn.</string>
    <string name="result_tie">Tie!</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_android_wins">Android Won!</string>
    <string name="result_player_one_wins">Player 1 Won!</string>
    <string name="result_player_two_wins">Player 2 Won!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Score</string>
    <string name="human">Human: </string>
    <string name="player_one">Player1: </string>
    <string name="player_two">Player2: </string>
    <string name="ties">Ties: </string>
    <string name="android">Android: </string>
    <string name="select_icon1">Palyer1/Human: </string>
    <string name="select_icon2">Player2/Android: </string>
    <string name="title_activity_tic_tac_toe_activity2">TicTacToeActivity2</string>
    <string name="title_activity_tic_tac_toe_activity3">TicTacToeActivity3</string>
    <string name="title_activity_selecticon">SelecticonActivity</string>
    <string name="title_activity_tic_tac_toe_activity1">TicTacToeActivity1</string>
    <string name="title_activity_tic_tac_toe_activity4">TicTacToeActivity4</string>
    <string name="title_activity_difficulty">DifficultyActivity</string>
    <string name="title_activity_sound">SoundActivity</string>

</resources>
