 
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:orientation="vertical"
    android:background="@drawable/easy_level_background"
    
     >  
    
    <TableLayout  
     android:id="@+id/playArea"  
      android:layout_width="match_parent"  
      android:layout_height="wrap_content"  
      android:layout_marginTop="30dp" >  
    
      <TableRow  
        android:id="@+id/tableRow1"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:gravity="center_horizontal" >  
    
        <Button  
          android:id="@+id/one"  
          android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/one" 
          
          android:textSize="70dp" />  
    
        <Button  
          android:id="@+id/two"  
          android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/two" 
            
          android:textSize="70dp" />  
    
        <Button  
          android:id="@+id/three"  
          android:layout_width="90dp"  
         android:layout_height="90dp"  
          android:text="@string/three" 
          
          android:textSize="70dp" />  
      </TableRow>  
    
      <TableRow  
        android:id="@+id/tableRow2"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:gravity="center_horizontal" >  
    
        <Button  
          android:id="@+id/four"  
          android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/four"  
           
          android:textSize="70dp" />  
    
        <Button  
          android:id="@+id/five"  
          android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/five"
          
          android:textSize="70dp" />  
    
        <Button  
          android:id="@+id/six"  
          android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/six" 
          
          android:textSize="70dp" />  
      </TableRow>  
    
      <TableRow  
        android:id="@+id/tableRow3"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:gravity="center_horizontal" >  
    
        <Button  
          android:id="@+id/seven"  
          android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/seven"
             
          android:textSize="70dp" />  
    
       <Button  
         android:id="@+id/eight"  
         android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/eight" 
          
          android:textSize="70dp" />  
    
        <Button  
          android:id="@+id/nine"  
          android:layout_width="90dp"  
          android:layout_height="90dp"  
          android:text="@string/nine" 
          
          android:textSize="70dp" />  
      </TableRow>  
    </TableLayout>  
    
    <TextView  
      android:id="@+id/information"  
      android:layout_width="match_parent"  
      android:layout_height="wrap_content"  
      android:layout_marginTop="5dp"  
      android:gravity="center_horizontal"  
      android:text="@string/info"  
      android:textSize="25dp" />  
    
    <TableLayout  
      android:id="@+id/tableLayout1"  
      android:layout_width="match_parent"  
      android:layout_height="wrap_content" >  
    
      <TableRow  
        android:id="@+id/tableRow4"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="10dp"  
        android:gravity="center_horizontal" >  
    
        <TextView  
          android:id="@+id/human"  
          android:layout_width="wrap_content"  
          android:layout_height="wrap_content"  
          android:text="@string/human"
          
           android:textSize="20dp"
           />  
    
        <TextView  
          android:id="@+id/humanCount"  
          android:layout_width="wrap_content"  
          android:layout_height="wrap_content"  
          android:layout_marginRight="10dp"
          
           android:textSize="20dp"
           />  
    
        <TextView  
          android:id="@+id/ties"  
          android:layout_width="wrap_content"  
          android:layout_height="wrap_content"  
         android:text="@string/ties"
         
          android:textSize="20dp"
          />  
    
        <TextView  
          android:id="@+id/tiesCount"  
          android:layout_width="wrap_content"  
          android:layout_height="wrap_content"  
          android:layout_marginRight="10dp"
          
           android:textSize="20dp"
           />  
   
        <TextView  
          android:id="@+id/android"  
          android:layout_width="wrap_content"  
          android:layout_height="wrap_content"  
          android:text="@string/android"
          
           android:textSize="20dp"
           />  
    
        <TextView  
          android:id="@+id/androidCount"  
          android:layout_width="wrap_content"  
          android:layout_height="wrap_content" 
          
           android:textSize="20dp"
          />  
    
      </TableRow>  
    </TableLayout>

    <Button
        android:id="@+id/Play_again_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        
        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"
       
        android:background="@drawable/play_again_image" />
  
  </LinearLayout>  
